Source/WebKit2/UIProcess/Network/CustomProtocols/soup/WebSoupCustomProtocolRequestManager.cpp
@@ -80,12 +80,15 @@ void WebSoupCustomProtocolRequestManager::derefWebContextSupplement()
 
 void WebSoupCustomProtocolRequestManager::registerSchemeForCustomProtocol(const String& scheme)
 {
+    ASSERT(!scheme.isNull());
+    if (m_registeredSchemes.contains(scheme))
+        return;
+
     if (!processPool())
         return;
 
     processPool()->registerSchemeForCustomProtocol(scheme);
 
-    ASSERT(!m_registeredSchemes.contains(scheme));
     m_registeredSchemes.append(scheme);
 }
 
